# haskell-nope

./: .gitignore  cabal.sandbox.config  makefile  nope.cabal
src/: Nope.hs
src/Nope/: CousCous.hs  Desugaring.hs  NameDeclaration.hs  NameResolution.hs  Nodes.hs  Parsing.hs  Results.hs  Sources.hs  TypeChecker.hs
src/Nope/CousCous/: Interpreter.hs  Nodes.hs  Values.hs
src/Nope/CousCous/Interpreter/: Heap.hs
tests/: TestSuite.hs
tests/Nope/Tests/: DesugaringTests.hs  ExecutionTests.hs  NameDeclarationTests.hs  NameResolutionTests.hs  ParsingTests.hs  Results.hs  TypeCheckerTests.hs  Variables.hs
tests/Nope/Tests/CousCous/: InterpreterTests.hs
